@@ -2,9 +2,11 @@
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2
 
   14 Jun 2006; Roy Marples <uberlord@gentoo.org>:
-  
+
+    wireless cards now get their txpower set to auto before starting.
+
     Fix "before net" dependencies, #135872 thanks to Oldrich Jedlicka.
- 
+
     pppd.sh now uses passwordfd instead of very nasty regex stuff,
     thanks to Oldrich Jedlicka, Alin Nastac and me :), #134337
 
